package scalanion;

option java_package = "org.grumpysoft";

message ChooseFrom {
  required string verb = 1;
  required int32 minimumChoices = 2;
  required int32 maximumChoices = 3;
  repeated string card = 4;
}

message Choices {
  repeated int32 choice = 1;
}

message Query {
  optional string question = 1;
  optional ChooseForOtherPlayer chooseForOtherPlayer = 2;
}

message ChooseForOtherPlayer {
  required string player = 1;
  required string verb = 2;
  repeated string card = 3;
}

message Answer {
  required bool answer = 1;
}

message Hand {
  repeated string card = 1;
}

message Event {
  required string player = 1;
  required string verb = 2;
  repeated string card = 3;
}

message Start {
  required int64 startTime = 1;
}

message GameOver {
  repeated PlayerWithScore playerWithScore = 1;
}

message PlayerWithScore {
  required string playerName = 1;
  required int32 score = 2;
}

message GameEvent {
  optional Start start = 1;
  optional GameOver gameOver = 2;
}

message ServerToClient {
  optional ChooseFrom chooseFrom = 1;
  optional Query query = 2;
  optional Hand hand = 3;
  optional Event event = 4;
  optional GameEvent gameEvent = 5;
}

message Introduction {
  required string playerName = 1;
}